@@ -123,6 +123,7 @@ public class ToolsControl extends JPanel {
     private void updateControl() {
         pHMeterCheckBox.setSelected( model.getPHMeter().isVisible() );
         pHPaperRadioButton.setSelected( model.getPHPaper().isVisible() );
+        conductivityTesterRadioButton.setSelected( model.getConductivityTester().isVisible() );
         magnifyingGlassRadioButton.setSelected( model.getMagnifyingGlass().isVisible() );
         concentrationGraphRadioButton.setSelected( model.getConcentrationGraph().isVisible() );
         showWaterCheckBox.setSelected( model.getMagnifyingGlass().isWaterVisible() );
@@ -131,6 +132,7 @@ public class ToolsControl extends JPanel {
     private void updateModel() {
         model.getPHMeter().setVisible( pHMeterCheckBox.isSelected() );
         model.getPHPaper().setVisible( pHPaperRadioButton.isSelected() );
+        model.getConductivityTester().setVisible( conductivityTesterRadioButton.isSelected() );
         model.getMagnifyingGlass().setVisible( magnifyingGlassRadioButton.isSelected() );
         model.getMagnifyingGlass().setWaterVisible( showWaterCheckBox.isSelected() );
         model.getConcentrationGraph().setVisible( concentrationGraphRadioButton.isSelected() );
