@@ -1,3 +1,4 @@
+8/4/10 placeholder for conductivity tester visual representation
 8/4/10 invert mapping of pH to wavelength, acids should be red-orange, bases should be green-blue
 8/4/10 bug fix, pH paper didn't change to correct color if solution was changed while paper is not dipped
 8/4/10 pH color key
